--- a/renewal/index.html
+++ b/renewal/index.html
@@ -155,7 +155,7 @@
                     <div class="h_inner animate"
                     data-animate="fadeInDown" 
                     data-duration="1s" 
-                    data-delay="1s">
+                    data-delay="0.75s">
                         <div class="logo">
                             <a href="#">
                                 <img src="img/logo/logo-re.png" alt="logo">
@@ -229,13 +229,16 @@
         <div class="main_wrapper">
             <div class="container">
                 <div class="main_wrap">
-                    <div class="right_wrap">
+                    <div class="right_wrap animate"
+                    data-animate="slideInUp" 
+                    data-duration="0.7s"
+                    >
                         <div class="r_ornament">
                             <div class="basic"></div>
                             <div class="extra"></div>
                             <div class="o_circle_r"></div>
                             <div class="b_circle">
-                                <span class="jua">마우스를<br>좌우로~</span>
+                                <span class="jua">CLICK <i>!</i><br>Both Image</span>
                             </div>
                             <div class="o_circle_l"></div>
                         </div> <!-- /r_ornament -->
@@ -261,7 +264,10 @@
                         </div> <!-- /right_img -->
                     </div> <!-- /right_wrap -->
 
-                    <div class="left_wrap">
+                    <div class="left_wrap animate"
+                    data-animate="slideInUp" 
+                    data-duration="0.8s"
+                    >
                         <div class="l_ornament">
                             <div class="extra"></div>
                             <div class="yellow"></div>
@@ -290,6 +296,48 @@
                         </div> <!-- /left_img -->
                     </div> <!-- /left_wrap -->
                 </div> <!-- /main_wrap -->
+
+                <div class="introduce">
+                    <div class="title">
+                        <h2 class="noto">국립발레단 소개</h2>
+                        <span class="noto">Introduce</span>
+                    </div>
+                    <div class="img_wrap">
+                        <div class="int_img"></div>
+                    </div>
+                    <div class="text_wrap">
+                        <div class="int_text">
+                            <div class="1_row">
+                                <p>
+                                    &nbsp;&nbsp;&nbsp;국립발레단은 1962년 창단된 대한민국 최초의 직업발레단으로 한국 발레 역사의 상징과도 같다.
+            60여 년의 시간 동안 수많은 무용수와 안무가, 그리고 훌륭한 예술감독과 작품 덕분에 국립발레단은 국내뿐만 아니라 해외에서도 그 위상을 인정받고 있다. <br>
+            현재 국내 최정상 무용수 60여 명과 세계적인 명작들을 레퍼토리로 보유하고 있으며, 정기공연을 비롯한 다양한 공연을 통해 끊임없이 관객들을 찾아가고 있다.
+                                </p>
+                            </div>
+                            <div class="2_row">
+                                <p>
+                                    &nbsp;&nbsp;&nbsp;국립발레단의 대표적인 전막 작품으로는
+            유리 그리고로비치의 '백조의 호수', '호두까기인형',
+            '스파르타쿠스', '라 바야데르',
+            파트리스 바르의 '지젤', 마르시아 하이데의 '잠자는 숲속의 미녀', 존 크랭코의 '말괄량이 길들이기' 등을 꼽을 수 있다. 뿐만 아니라, 우베 숄츠의 'The Seventh Symphony(교향곡 7번)' 등을 등을 연이어 선보이며 클래식 발레에서 모던 발레, 네오클래식 발레, 드라마 발레 등 폭넓은 장르로 영역을 확장해 나가고 있다.
+                                </p>
+                            </div>
+                            <div class="last_p">
+                                <p>
+                                    &nbsp;&nbsp;&nbsp;국립발레단은 고유의 창작 발레 레퍼토리 개발에도 끊임없이 노력하고 있는데, 각각 설화와 고전시를 배경으로 한 <왕자호동>, <허난설헌-수월경화> 등이 대표작이다. 2019년 5월 발표힌 신작 < 호이 랑 > 역시 한국적 이야기를 서양의 몸짓으로 풀어낸 작품으로 국립발레단이 한국 창작 발레에 대해 수없이 고민한 흔적을 찾아볼 수 있다.
+            
+            국립발레단은 2015년부터 시작된 안무가 육성 프로젝트인 < KNB Movement Series >를 통해 단원들이 무용수뿐만 아니라 안무가로서의 역량을 발휘할 기회를 마련해 주고 있다. 이는 신진 안무가 발굴을 통해 무용수의 제2의 인생을 지원한다는 점에 큰 의미가 있을 뿐만 아니라 일회성 공연에 그치지 않고 하나의 탄탄한 작품이 될 수 있도록 지원함으로써 국립발레단의 레퍼토리 개발에도 한 몫을 하고 있다.
+                                </p>
+                            </div>
+                        </div>
+                        <div class="plus">
+                            <a href="#">
+                            <span class="cabin">More</span>
+                            <i class="fas fa-plus"></i>
+                            </a>
+                        </div>
+                    </div> <!-- /text_wrap -->
+                </div> <!-- /introduce -->
             </div> <!-- /container -->
         </div> <!-- /main_wrapper -->
         <div class="main_bg"></div>
@@ -300,6 +348,7 @@
 
 
     <script src="https://code.jquery.com/jquery-1.12.4.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery.ripples/0.5.3/jquery.ripples.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/jquery-scrolla@0.0.3/dist/js/jquery.scrolla.min.js"></script>
 
     <script src="js/skrollr.min.js"></script>
